--- a/src/app/src/main/res/layout/activity_group_detail.xml
+++ b/src/app/src/main/res/layout/activity_group_detail.xml
@@ -63,5 +63,10 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="match_parent"
+            android:layout_height="40dp" />
+
     </LinearLayout>
 </LinearLayout>
