--- a/src/app/src/main/res/layout/fragment_chart.xml
+++ b/src/app/src/main/res/layout/fragment_chart.xml
@@ -6,21 +6,39 @@
     android:padding="16dp">
 
     <!-- Spinner for selecting month -->
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tháng"
+        android:textColor="#061A85"
+        android:textSize="16sp" />
+
     <Spinner
         android:id="@+id/monthSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:spinnerMode="dropdown"
+        android:background="@drawable/spinner"
         android:prompt="@string/prompt_select_month" />
 
     <!-- Spinner for selecting year -->
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Năm"
+        android:textColor="#061A85"
+        android:textSize="16sp" />
+
     <Spinner
         android:id="@+id/yearSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:spinnerMode="dropdown"
+        android:background="@drawable/spinner"
         android:prompt="@string/prompt_select_year" />
 
     <!-- Bar chart to display income and expense data -->
