--- a/src/app/src/main/res/layout/fragment_more.xml
+++ b/src/app/src/main/res/layout/fragment_more.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="#F8F4F4"
     android:orientation="vertical"
     tools:context=".MoreFragment">
 
